--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp-backtrace = { version = "0.17.0", features = [
+esp-backtrace = { version = "0.18.1", features = [
     "esp32c6",
-    "exception-handler",
     "panic-handler",
     "println",
 ] }
-esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable"] }
-esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
-esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
+esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
+esp-println = { version = "0.16.1", default-features = false, features = ["esp32c6", "uart", "colors", "critical-section"] }
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
 
 [profile.dev]
 # Rust debug is too slow.
