Add Grove module examples for XIAO ESP32-C6
- Add Grove LED example (D7/GPIO17)
- Add Grove Button example (D1/GPIO1)
- Add Grove Potentiometer example with ADC (A0/GPIO0)
- Add Grove Buzzer example with PWM (A2/GPIO2)
- Update build.rs to support examples with linker args
- Switch esp-println from uart to jtag-serial for USB connectivity
- Update README with comprehensive examples documentation
- Add pin mapping reference table
- Add .claude/ to .gitignore

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [target.riscv32imac-unknown-none-elf]
 runner = "espflash flash --monitor"
+#runner = "probe-rs run --chip esp32c6 --protocol jtag"
 
 
 [env]
