--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ esp-backtrace = { version = "0.18.1", features = [
     "println",
 ] }
 esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
-esp-println = { version = "0.16.1", default-features = false, features = ["esp32c6", "uart", "colors", "critical-section"] }
+esp-println = { version = "0.16.1", default-features = false, features = ["esp32c6", "jtag-serial", "colors", "critical-section"] }
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
+nb = "1.1"
 
 [profile.dev]
 # Rust debug is too slow.
