Add Grove sensor and display examples for XIAO ESP32-C6
- Add Grove Light Sensor example (ADC + calibration)
- Add Grove Sound Sensor example (ADC + calibration)
- Add Grove OLED Display example (I2C)
- Add Grove BMP280 Air Pressure Sensor example (I2C)
- Add Grove AHT20 Temp & Humidity Sensor example (I2C)
- Update dependencies in Cargo.toml (embedded-graphics, ssd1306, bme280, libm)
- Update README with new examples and I2C pin mapping (GPIO22/23)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,12 @@ esp-println = { version = "0.16.1", default-features = false, features = ["esp32
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
 nb = "1.1"
 
+[dev-dependencies]
+embedded-graphics = "0.8.1"
+ssd1306 = "0.10.0"
+libm = "0.2.11"
+bme280 = "0.5"
+
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
